--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 DISCORD_TOKEN=PUT_DISCORD_BOT_TOKEN_HERE
 REPLICATE_API_TOKEN=PUT_REPLICATE_API_TOKEN_HERE
+#to get a replicate api token go here https://replicate.com
+#to get a discord token go here https://discord.com/developers/applications
